# mytodo

./: .gitignore  Dockerfile.dev  Docs  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: Pipeline.yml
Docs/: project_build.md
docs/: dicas.md  docs.md  index.md
migrations/: env.py
migrations/versions/: 67faedd1a399_initial.py  99b06a755b1a_teste.py  9a25f7c6d946_criando_user_name.py  9af734b3169d_.py
tests/: conftest.py  test_main_api.py
todo/: app.py  auth.py  cli.py  config.py  db.py  default.toml  security.py  settings.toml
todo/models/: __init__.py  __init__py  user.py
todo/routes/: __init__.py  auth.py  user.py
